# fireman

./: .dockerignore  .gitignore  .golangci.yml  AGENTS.md  Dockerfile  Makefile  README.md  agents.md  config.json  go.mod  go.sum
sidecars/market-provider/: .dockerignore  Dockerfile  README.md  pyproject.toml
sidecars/market-provider/fireman_market_provider/: __init__.py  app.py  logutil.py  normalize.py  provider_errors.py  schemas.py  timeout_util.py
sidecars/market-provider/fireman_market_provider/adapters/: __init__.py  classification.py  cn_code.py  em_directory.py  em_fund_history.py  fallback.py  hkex_directory.py  names.py  registry.py  resolve.py  symbols.py  tickflow.py
sidecars/market-provider/fireman_market_provider/worker/: __init__.py  config.py  errors.py  goclient.py  process_runner.py  (+2 more)
sidecars/market-provider/tests/: conftest.py  dataload.py  fetch_compat.py  test_app.py  test_classification.py  test_cn_code.py  test_cn_code_bj_lof.py  test_cn_mutual_fund_source.py  test_em_directory.py  test_em_fund_history.py  test_error_contract.py  test_fallback.py  test_fetch_identity.py  test_fetch_mock.py  test_fetch_regression.py  test_history_fetch_regression.py  test_live_smoke.py  test_logging.py  test_names.py  test_names_negative_cache.py  test_normalize.py  test_resolve.py  test_symbols.py  test_task_process_runner.py  test_td034_regression.py  test_td035_regression.py  test_td036_regression.py  test_tickflow.py  test_tickflow_live.py  test_timeout_elapsed.py  test_timeout_util.py  test_worker.py  test_worker_executors.py  test_worker_protocol.py
(+878 files in other folders)
