[project]
name = "fireman-market-provider"
version = "0.1.0"
description = "AKShare sidecar for Fireman: returns standardized historical market data."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "akshare>=1.16.0",
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "requests>=2.31.0",
    "tickflow[pandas]>=0.1.24",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
	dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fireman_market_provider"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not live'"
markers = [
    "live: hits real upstream network (AKShare/TickFlow); run with FIREMAN_LIVE_AKSHARE=1 / FIREMAN_LIVE_TICKFLOW=1",
    "subprocess: runs call_with_timeout via real spawn subprocess",
]
